# oop_tema2_virtual_registry

./: CMakeLists.txt  Menu.cpp  README.md  account.cpp  account.h  assign_id.h  catalog.cpp  catalog.h  cloning.h  get_type.h  main.cpp  menu.h  newiostream.cpp  newiostream.h  no_grades.cpp  no_grades.h  no_student.cpp  no_student.h  person.cpp  person.h  student.cpp  student.h
