cmake_minimum_required(VERSION 3.23)
project(oop_tema2_redone)

set(CMAKE_CXX_STANDARD 14)

add_executable(oop_tema2_redone main.cpp person.h person.cpp assign_id.h student.h student.cpp account.h account.cpp newiostream.h newiostream.cpp get_type.h catalog.h catalog.cpp no_grades.h no_grades.cpp no_student.h no_student.cpp menu.h Menu.cpp cloning.h)
